# MyOwnStandardsTemplates

./: .gitmodules  文本尾随句点标准.md
scripts/: create_app_icons.bat  create_app_icons.sh
standards/: Markdown 文档空格标准.md  小标题高亮范围标准.md  文本尾随句点标准.md
templates/: .gitignore
templates/FileTemplate/Licenses/: MIT
templates/ProjectTemplate/CommonProjectTemplate/: CMakeLists.txt
templates/ProjectTemplate/CommonProjectTemplate/Project/: CMakeLists.txt
templates/ProjectTemplate/HeaderOnlyLibraryTemplate/: CMakeLists.txt  TODO.md
templates/ProjectTemplate/HeaderOnlyLibraryTemplate/cmake/: @LIBNAME@Config.cmake.in
templates/ProjectTemplate/HeaderOnlyLibraryTemplate/cmake/templates/: config.hpp.in
templates/ProjectTemplate/LibraryTemplate/: CMakeLists.txt
templates/ProjectTemplate/LibraryTemplate/cmake/: @LIBNAME@Config.cmake.in
templates/ProjectTemplate/LibraryTemplate/cmake/templates/: config.hpp.in
templates/ProjectTemplate/LibraryTemplate/include/@LIB_NAME@/: defines.hpp
templates/ProjectTemplate/QtProjectTemplate/: Qt项目模板使用指南.md  default_config.yml  default_config_sample.yml
templates/ProjectTemplate/QtProjectTemplate/Deprecated/: Qt项目模板使用指南.md  default_config_sample.yml
templates/ProjectTemplate/QtProjectTemplate/Project/: CMakeLists.txt  TODO.md
templates/ProjectTemplate/QtProjectTemplate/Project/cmake/template/: Info.plist.in  app.rc.in  config.h.in
templates/ProjectTemplate/QtProjectTemplate/Project/cmake/templates/: Info.plist.in  app.manifest.in  config.h.in
templates/ProjectTemplate/QtProjectTemplate/Project/resources/: app.qrc
templates/ProjectTemplate/QtProjectTemplate/Project/scripts/: create_dmg.sh
templates/ProjectTemplate/QtProjectTemplate/Project/src/: CMakeLists.txt  language.cpp  logo_icon.cpp  logo_icon.h  main.cpp  settings.cpp
templates/ProjectTemplate/QtProjectTemplate/Project/src/app/: language.cpp  language.h  logo_icon.cpp  main.cpp  settings.cpp  settings.h
templates/ProjectTemplate/QtProjectTemplate/Project/src/trwidgets/: trdialog.cpp  trdialog.h  trmainwindow.cpp  trmainwindow.h  trwidget.cpp  trwidget.h
templates/ProjectTemplate/QtProjectTemplate/Project/src/utils/: debug_output.h  file_io.h  string_format.h
